@@ -1,3 +1,9 @@
+2019-06-22  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	* libbalsa/address-book-rubrica.c
+	(libbalsa_address_book_rubrica_modify_address): Fix the search
+	for the card matching a given full-name.
+
 2019-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Guard against null string.
